Fix footer logo distortion: add width: auto, set height: 70px
Made-with: Cursor

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -282,8 +282,10 @@
 }
 
 .footer__logo-img {
-  height: 90px;
+  height: 70px;
+  width: auto;
   margin-bottom: .75rem;
+  display: block;
 }
 
 .footer__logo-text {
